--- a/Html/monitor.html
+++ b/Html/monitor.html
@@ -44,15 +44,26 @@
             </ul>
           </li>
 
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="true">
+              Profile
+            </a>
+            <ul class="dropdown-menu">
+              <p>Welcome</p>
+              <a href="signup-login.html">
+              <button type="button" class="btn btn-primary btn-sm">Signup/Login</button></a>
+              <p>Add A product here</p>
+              <a href="add-product.html">
+                <button type="button" class="btn btn-primary btn-sm">Add a product</button></a>
+            
+            </ul>
+          </li>
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
             style="background-color: aliceblue;">
           <button class="btn btn-outline-success" type="submit">Search</button>
-          <div class="d-grid gap-2 d-md-block">
-            <button class="btn btn-primary" type="button" id="profile" style="margin-left: 8px;">Profile</button>
-
-          </div>
+         
         </form>
       </div>
     </div>
