--- a/Html/add-product.html
+++ b/Html/add-product.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mouse</title>
+  <meta charset='utf-8'>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <title>Add Product</title>
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <link rel='stylesheet' type='text/css' media='screen' href='/CSS/index.css'>
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-    crossorigin="anonymous"></script>
-
-  <link rel='stylesheet' type='text/css' media='screen' href='/CSS/index.css'>
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous">
+    </script>
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js"
+    integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+  <script src="/js/SaveProduct.js"></script>
 </head>
 
 <body>
@@ -43,74 +46,69 @@
               <li><a class="dropdown-item" href="/Html/Keyboard.html">Keyboard</a></li>
             </ul>
           </li>
+
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="true">
               Profile
             </a>
             <ul class="dropdown-menu">
               <p>Welcome</p>
+              <p>User Can Signup or Login Here</p>
               <a href="signup-login.html">
-              <button type="button" class="btn btn-primary btn-sm">Signup/Login</button></a>
+                <button type="button" class="btn btn-primary btn-sm">Signup/Login</button></a><br>
               <p>Add A product here</p>
               <a href="add-product.html">
                 <button type="button" class="btn btn-primary btn-sm">Add a product</button></a>
-            
             </ul>
           </li>
         </ul>
+
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
             style="background-color: aliceblue;">
           <button class="btn btn-outline-success" type="submit">Search</button>
-          
         </form>
       </div>
     </div>
   </nav>
-  <H1>Best sellers</H1>
-  <div class="container">
-    <div class="row">
-      <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="/photos/mouse/hp-mouse2.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">HP S1000 Plus</h5>
-          <p class="card-text">HP S1000 Plus Silent USB Black Wireless Computer Mute Mouse,</p>
-          <a href="/Html/product-detail.html" class="btn btn-primary">More Info</a>
-        </div>
-      </div>
-
-      <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="/photos/mouse/hp-mouse1.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">HP 150 Wireless Mouse</h5>
-          <p class="card-text">HP 150 Wireless Mouse, 1600 DPI Optical Tracking, 2.4 GHz Wireless Connection (Black)</p>
-          <a href="#" class="btn btn-primary">More Info</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="/photos/mouse/logitech-mouse1.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Logitech M90 Wired</h5>
-          <p class="card-text">Logitech M90 Wired USB Mouse, 3 yr Warranty, 1000 DPI Optical Tracking, Ambidextrous
-            PC/Mac/Laptop - Black</p>
-          <a href="#" class="btn btn-primary">More Info</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="/photos/mouse/logitech-mouse2.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Logitech Signature M650</h5>
-          <p class="card-text">Logitech Signature M650 L Full Size Wireless Mouse - for Large Sized Hands, 2-Year
-            Battery, Silent Clicks, Customisable Side Buttons, Bluetooth</p>
-          <a href="#" class="btn btn-primary">More Info</a>
-        </div>
-      </div>
+  <form class="container" style="margin: 20px;" id="add-productForm" enctype="multipart/form-data">
+    <div class="form-group">
+      <label for="product-name">Product Name</label>
+      <input type="text" class="form-control" id="product-name" placeholder="Enter name" style="width: 20%;">
+    </div><br>
+    <label for="select-product">Select Product Category</label>
+    <select class="form-select" aria-label="Default select example" id="select-product" style="width: 20%;">
+      <option selected>Select product</option>
+      <option value="mouse">Mouse</option>
+      <option value="keyboard">Keyboard</option>
+      <option value="monitor">Monitor</option>
+      <option value="processor">Processor</option>
+    </select><br>
+    <div class="mb-3">
+      <label for="formFile" class="form-label">Select Image of Item</label>
+      <input class="form-control" type="file" id="formFile" style="width: 20%;">
     </div>
-  </div>
-
-
-
-
+    <div class="mb-3">
+      <label for="small-description" class="form-label">Small description</label>
+      <textarea class="form-control" id="small-description" rows="3" placeholder="Write product highlight"
+        style="width: 40%;"></textarea>
+    </div>
+    <div class="mb-3">
+      <label for="main-description" class="form-label">Main description</label>
+      <textarea class="form-control" id="main-description" rows="3" placeholder="Write Main highlight"
+        style="width: 40%;"></textarea>
+    </div>
+    <div class="form-group">
+      <label for="product-price">Product Price</label>
+      <input type="text" class="form-control" id="product-price" placeholder="EX: &#x20b9; 550 " style="width: 20%;">
+    </div><br>
+    <div class="form-group">
+      <label for="stock">Stock</label>
+      <input type="text" class="form-control" id="stock" placeholder="EX:12 " style="width: 20%;">
+    </div>
+    <br>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
 </body>
 
 </html>
