--- a/Html/index.html
+++ b/Html/index.html
@@ -7,7 +7,6 @@
   <title>Welcome</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link rel='stylesheet' type='text/css' media='screen' href='/CSS/index.css'>
-  <script src='main.js'></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" 
@@ -50,8 +49,12 @@
             </a>
             <ul class="dropdown-menu">
               <p>Welcome</p>
+              <p>User Can Signup or Login Here</p>
               <a href="signup-login.html">
-              <button type="button" class="btn btn-primary btn-sm">Signup/Login</button></a>
+              <button type="button" class="btn btn-primary btn-sm">Signup/Login</button></a><br>
+              <p>Add A product here</p>
+              <a href="add-product.html">
+                <button type="button" class="btn btn-primary btn-sm">Add a product</button></a>
             </ul>
           </li>
         </ul>
