--- a/Html/signup-login.html
+++ b/Html/signup-login.html
@@ -5,14 +5,77 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset='utf-8'>
+	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
+	<title>Welcome</title>
+	<meta name='viewport' content='width=device-width, initial-scale=1'>
+	
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+	  integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" 
+	integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+	  
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
         <link rel='stylesheet' type='text/css' media='screen' href='/CSS/login.css'>
+		<link rel='stylesheet' type='text/css' media='screen' href='/CSS/index.css'>
         <script src="/js/login.js"></script>
     <title>Signup</title>
 </head>
 <body>
+	<nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+		<div class="container-fluid">
+		  <img src="/photos/1.jpg" class="rounded mx-auto d-block" alt="img">
+		  <a class="navbar-brand" href="index.html" style="margin-left: 8px;"> Sharma Electronics</a>
+		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		  </button>
+		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+			  <li class="nav-item">
+				<a class="nav-link" href="whishlist.html">Wishlist</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="myOrders.html">My Orders</a>
+			  </li>
+			  <li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="true">
+				  Products
+				</a>
+				<ul class="dropdown-menu">
+				  <li><a class="dropdown-item" href="mouse.html">Mouse</a></li>
+				  <li><a class="dropdown-item" href="processor.html">Processor</a></li>
+				  <li><a class="dropdown-item" href="monitor.html">Monitor</a></li>
+				  <li><a class="dropdown-item" href="/Html/Keyboard.html">Keyboard</a></li>
+				</ul>
+			  </li>
+	
+			  <li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="true">
+				  Profile
+				</a>
+				<ul class="dropdown-menu">
+				  <p>Welcome</p>
+				  <p>User Can Signup or Login Here</p>
+				  <a href="signup-login.html">
+				  <button type="button" class="btn btn-primary btn-sm">Signup/Login</button></a><br>
+				  <p>Add A product here</p>
+				  <a href="add-product.html">
+					<button type="button" class="btn btn-primary btn-sm">Add a product</button></a>
+				</ul>
+			  </li>
+			</ul>
+			
+			<form class="d-flex" role="search">
+			  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
+				style="background-color: aliceblue;">
+			  <button class="btn btn-outline-success" type="submit">Search</button>
+			</form>
+		  </div>
+		</div>
+	  </nav>
     <div class="container">
     	<div class="row">
 			<div class="col-md-6 col-md-offset-3">
@@ -31,16 +94,20 @@
 					<div class="panel-body">
 						<div class="row">
 							<div class="col-lg-12">
-								<form id="login-form" action="https://phpoll.com/login/process" method="post" role="form" style="display: block;">
+								<form id="login-form" method="post" role="form" style="display: block;">
 									<div class="form-group">
-										<input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
+										<input type="text" name="email" id="email-login" tabindex="1" class="form-control" placeholder="Email Address" value="">
 									</div>
 									<div class="form-group">
-										<input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Password">
+										<input type="password" name="password" id="password-login" tabindex="2" class="form-control" placeholder="Password">
 									</div>
-									<div class="form-group text-center">
-										<input type="checkbox" tabindex="3" class="" name="remember" id="remember">
-										<label for="remember"> Remember Me</label>
+									<div class="form-check">
+										<input type="radio" class="form-check-input" id="enduser-login" name="role-login" value="enduser">
+										<label class="form-check-label" for="enduser-login">End User</label>
+									  </div>
+									  <div class="form-check">
+										<input type="radio" class="form-check-input" id="admin-login" name="role-login" value="admin">
+										<label class="form-check-label" for="admin-login">Admin</label>
 									</div>
 									<div class="form-group">
 										<div class="row">
@@ -53,18 +120,21 @@
 										<div class="row">
 											<div class="col-lg-12">
 												<div class="text-center">
-													<a href="https://phpoll.com/recover" tabindex="5" class="forgot-password">Forgot Password?</a>
+													<a href="" tabindex="5" class="forgot-password">Forgot Password?</a>
 												</div>
 											</div>
 										</div>
 									</div>
 								</form>
-								<form id="register-form" action="https://phpoll.com/register/process" method="post" role="form" style="display: none;">
+								<form id="register-form"  method="post" role="form" style="display: none;">
 									<div class="form-group">
-										<input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
+										<input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" >
 									</div>
 									<div class="form-group">
-										<input type="email" name="email" id="email" tabindex="1" class="form-control" placeholder="Email Address" value="">
+										<input type="text" name="email" id="email" tabindex="1" class="form-control" placeholder="Email Address" >
+									</div>
+									<div class="form-group">
+										<input type="text" name="number" id="number" tabindex="1" class="form-control" placeholder="Phone Number" >
 									</div>
 									<div class="form-group">
 										<input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Password">
@@ -72,6 +142,16 @@
 									<div class="form-group">
 										<input type="password" name="confirm-password" id="confirm-password" tabindex="2" class="form-control" placeholder="Confirm Password">
 									</div>
+
+									<div class="form-check">
+										<input type="radio" class="form-check-input" id="enduser-registration" name="role-registration" value="enduser">
+										<label class="form-check-label" for="enduser-registration">End User</label>
+									  </div>
+									  <div class="form-check">
+										<input type="radio" class="form-check-input" id="admin-registration" name="role-registration" value="admin">
+										<label class="form-check-label" for="admin-registration">Admin</label>
+									</div>
+
 									<div class="form-group">
 										<div class="row">
 											<div class="col-sm-6 col-sm-offset-3">
